mejorando style.css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li class="aside-h2_li"> > BatmanFans</li>
                         <li class="aside-h2_li"> > Murcielagos</li>
                     </ul>
-            </asidec>
+            </aside>
     </div>
     <footer>
         
