--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             </aside>
     </div>
     <footer>
-        
+        <div>
+            
+        </div>
     </footer>
 </body>
 </html>
